# cibars

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  README.md  SPEC.md  build.rs  config.toml  config.toml.example
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
docs/plans/: 2026-03-03-cibars-design.md  2026-03-03-cibars-implementation.md  2026-03-04-boost-redesign-impl.md  2026-03-04-boost-redesign.md
docs/superpowers/plans/: 2026-03-18-per-bar-finish-timestamps.md
docs/superpowers/specs/: 2026-03-18-per-bar-finish-timestamps-design.md
src/: app.rs  config.rs  linkage.rs  main.rs  model.rs  poll_scheduler.rs
src/poller/: aws.rs  github.rs  mod.rs
src/ui/: bar.rs  header.rs  mod.rs  statusbar.rs
