[package]
name = "cibars"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest", "sso"] }
aws-sdk-codepipeline = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
octocrab = "0.44"
ratatui = "0.29"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
signal-hook = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
vergen-gitcl = { version = "1", features = ["build"] }
